	  made it possible to change this binding in your GTK theme.
	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
	  Made screenname colors automatically adjust themselves to compensate for
	  background color.
	* Removed "Raise Buddy List Window on Events" defaulted to "No"
	* Removed "Display remote nicknames if no alias is set"

version 1.0.2 (10/19/2004):
	Bug Fixes:
	* MSN file transfers work on big endian machines (Jean-Francois Roy and
	  Evan Schoenberg)
	* Fixed the MSN signon crash with Miranda users in the buddy list
	* Fixed sending messages to MSN Web Messenger users (Damien Ayers)
	* Fixed some memory leaks in the MSN plugin (Evan Schoenberg)
	* Fixed a crash viewing certain MSN user profiles (Evan Schoenberg)
	* Fixed a crash sending a file on MSN when the file is unreadable
	* Fixed a crash deleting accounts (Andrew Hart)
	* Fixed a crash inviting to chats (Andrew Hart)
	* Fixed a bug in Yahoo privacy handling (Peter Lawler)
	* Fixed a crash trying to join a chat from the docklet when not signed in
	  to a chat-capable account (Daniel Atallah)

version 1.0.1 (10/07/2004):
	New Features:
	* Use the GNOME default browser when opening links if you're running GNOME
	  (Alex Duggan)
	* Added support for multiple addressbooks in the gevolution plugin
	  (Henry Jen).

	Bug Fixes:
	* Send-As menu duplicates less work (Dave West)
	* Can now see your own MSN buddy icon (Felipe Contreras)
	* Jabber roomlist fetches work again
	* Close buttons on tabs in existing conversations correctly reflect the
	  "show close buttons on tabs" preference (Nathan Fredrickson)
	* Fix to make the get_signon(buddy) perl plugin function work (Gregory C.
	  Harfst)
	* Fixed crashes when reloading the gevolution plugin (Henry Jen)
	* Fixed some memory leaks in the gevolution plugin.
	* Wrap at character boundaries if there is not enough space for a full word
	* 64 bit compile warning fixes

version 1.0.0 (09/17/2004):
	New Features: